--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="encriptado">
-        <img src="image.svg" alt="" id="muñeco"/>
+        <img src="image.png" alt="" id="muñeco"/>
         <div class="mensaje-encriptado" id="mensaje-encriptado">
             <h2 id="titulo-mensaje">Ningún mensaje fue encontrado</h2>
             <p id="parrafo">Ingresa el texto que deseas encriptar o desencriptar</p>
